fix: using state instead of txpool
