# www/http/server.go
@@ -82,7 +82,7 @@ func (s *Server) StartServer(grpcServer string) error {
 	s.router.HandleFunc("/block/hash/{hash}", s.GetBlockByHashHandler)
 	s.router.HandleFunc("/block/height/{height}", s.GetBlockByHeightHandler)
 	s.router.HandleFunc("/transaction/id/{id}", s.GetTransactionHandler)
-	s.router.HandleFunc("/transaction/pool", s.GetTransactionPoolHandler)
+	s.router.HandleFunc("/txpool", s.GetTxPoolContentHandler)
 	s.router.HandleFunc("/account/address/{address}", s.GetAccountHandler)
 	s.router.HandleFunc("/validator/address/{address}", s.GetValidatorHandler)
 	s.router.HandleFunc("/validator/number/{number}", s.GetValidatorByNumberHandler)
